--- a/stock-api.yml
+++ b/stock-api.yml
@@ -36,7 +36,7 @@ spec:
         - name: regcred  #ecr auth secret
       containers:
         - name: stockapi-pod
-          image: nexusvision.azurecr.io/stockapi_r:1.11 # {"$imagepolicy": "flux-system:identity"}
+          image: 377379411010.dkr.ecr.ap-northeast-1.amazonaws.com/se:latest # {"$imagepolicy": "flux-system:identity"}
           imagePullPolicy: IfNotPresent
           resources:
             requests:
