--- a/ArgoCD/stock-api.yml
+++ b/ArgoCD/stock-api.yml
@@ -40,8 +40,7 @@ spec:
           imagePullPolicy: IfNotPresent
           resources:
             requests:
-              memory: "200Mi" #megabytes1
-              cpu: "200m"   #.05 core
+              memory: "200Mi" #megabytes12              cpu: "200m"   #.05 core
             limits:
               memory: "250Mi" #issues log file : OOM killed
               cpu: "250m"
